Add FTP source ftp.fi.debian.org.

--- a/etc/ftpsync.conf
+++ b/etc/ftpsync.conf
@@ -25,6 +25,7 @@ TO="/home/debian-mirror/"
 
 ## The host we mirror from
 #RSYNC_HOST=some.mirror.debian.org
+RSYNC_HOST=ftp.fi.debian.org
 
 ## In case we need a user to access the rsync share at our upstream host
 #RSYNC_USER=
