--- a/etc/ftpsync.conf
+++ b/etc/ftpsync.conf
@@ -138,7 +138,7 @@ LOGROTATE=180
 ## the very first set of options.
 ## Please ensure you do not add a conflict with the usual rsync options as
 ## shown below.
-# RSYNC_EXTRA=""
+RSYNC_EXTRA="--verbose"
 
 ## limit I/O bandwidth. Value is KBytes per second, unset or 0 means unlimited
 #RSYNC_BW=""
