Use subdir for repository.

--- a/etc/ftpsync.conf
+++ b/etc/ftpsync.conf
@@ -14,7 +14,7 @@
 ## CAREFUL, this directory will contain the mirror. Everything else
 ## that might have happened to be in there WILL BE GONE after the mirror sync!
 #TO="/srv/mirrors/debian/"
-TO="/home/debian-mirror/"
+TO="/home/debian-mirror/debian"
 
 ## The upstream name of the rsync share.
 ##
